@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.356 2005/10/13 19:01:21 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.357 2005/10/15 01:15:53 rocket Exp $
+
+  15 Oct 2005; Eric Edgar <rocket@gentoo.org>
+  targets/support/mips-arcload_conf.sh:
+  Fix MIPS Serial Detection
 
   13 Oct 2005; Eric Edgar <rocket@gentoo.org>
   targets/support/bootloader-setup.sh, targets/support/create-iso.sh,
